# jira-worklog-exporter

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build-windows.yml
docs/: HISTORY.md  PRD_Jira_Worklog_Exporter.md
docs/briefs/: JWE-2-implementation-brief.md  JWE-22-23-security-foundation-brief.md  JWE-28-docs-sweep-brief.md  JWE-31-phase2-state-leak.md  JWE-31-test-isolation.md  JWE-43-44-version-prerelease-brief.md  JWE-7-cancel-granularity-brief.md  _connector-test.md
docs/design/: JWE Redesign.html  QSS-Richtung.html  README.md  app-window.jsx  design-tokens.md  styles.css  tokens.json
src/jwe/: __init__.py  __main__.py  adf.py  cli.py  config.py  csv_writer.py  exporter.py  gui.py  gui_main.py  i18n.py  service.py
src/jwe/api/: __init__.py  auth.py  client.py  search.py  tenant_info.py  url_builder.py  user.py  worklog.py
src/jwe/gui/: __init__.py  main_window.py
src/jwe/gui/theme/: __init__.py  app.qss  tokens.py
src/jwe/gui/widgets/: __init__.py  auth.py  filter.py  output.py  section_card.py  status.py  title_bar.py  user_search.py
src/jwe/gui/workers/: __init__.py  cloud_id_discover.py  connection_test.py  export_worker.py  user_search.py
tests/: conftest.py  test_adf.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_csv_writer.py  test_exporter.py  test_i18n.py  test_search.py  test_service.py  test_tenant_info.py  test_url_builder.py  test_user.py  test_worklog.py
tests/fixtures/: adf_samples.json
tests/gui/: conftest.py  test_auth_widget.py  test_export_worker.py  test_filter_widget.py  test_i18n_runtime.py  test_main_window.py  test_main_window_5a.py  test_main_window_5b.py  test_output_widget.py  test_section_card.py  test_status_widget.py  test_status_widget_5a.py  test_status_widget_5b.py  test_theme.py  test_user_search_widget.py  test_user_search_worker.py
