[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jwe"
dynamic = ["version"]
description ="Jira Cloud Worklog Exporter — CSV export of user worklogs from a Jira Cloud site"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Martin" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.32",
    "tqdm>=4.66",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6", "keyring>=25.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "pytest-timeout>=2.3",
    "PySide6>=6.6",
    "responses>=0.25",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests",
    "types-tqdm",
    "keyring>=25.0",
]
build = [
    "pyinstaller>=6.10",
]

[project.scripts]
jwe-cli = "jwe.cli:main"

[project.gui-scripts]
jwe-gui = "jwe.gui_main:main"

[project.urls]
Homepage = "https://github.com/elementfortyseven/jira-worklog-exporter"
Documentation = "https://github.com/elementfortyseven/jira-worklog-exporter/blob/main/docs/PRD_Jira_Worklog_Exporter.md"
Issues = "https://github.com/elementfortyseven/jira-worklog-exporter/issues"

[tool.hatch.version]
path = "src/jwe/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/jwe"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long — formatter handles it
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert False in tests
"src/jwe/gui/*" = ["N802"]  # Qt requires camelCase override names (closeEvent, etc.)

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tqdm.*", "keyring.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=jwe",
    "--cov-report=term-missing",
]
# Absolute per-test timeout in seconds. Raised 10 -> 30 because the first GUI
# test pays the cold QApplication/PySide6 startup cost, which can exceed 10s on
# the slow GitLab Windows runner (beta, variable provisioning) and caused an
# intermittent timeout in AuthWidget construction (JWE-31). timeout_func_only is
# deliberately NOT set (stays false) so the timeout still covers fixture
# teardown — the MainWindow closeEvent / stop_running_threads hang targeted by
# JWE-31 Phase 2 must remain catchable.
timeout = 30
# Qt offscreen platform for CI environments without
# display. Works on Windows/macOS/Linux uniformly.
qt_qpa_platform = "offscreen"

[tool.coverage.run]
source = ["src/jwe"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
